Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8825

[C++] Cannot compiled pass with Wunused-parameter flag

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 0.17.0
    • 1.0.0
    • C++
    • mac os x/ linux

    Description

      arrow's header: array.h has a function value_length(int64_t i) ...

      the i is unused parameter, if i compile it with -Werror / -Wunused-parameter flag, it will get a failure.

       

      Attachments

        Activity

          People

            hurricane1026 hurricanelee
            hurricane1026 hurricanelee
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 2h 10m
                2h 10m