ARROW-8825: [C++] Mark parameter as unused

Supersedes #7202

Closes #7361 from wesm/ARROW-8825

Authored-by: Wes McKinney <wesm@apache.org>
Signed-off-by: Wes McKinney <wesm@apache.org>